Readded animations, fixed minor design bugs, and integrapted graphs into light/dark mode system.

--- a/Website-Files/style.css
+++ b/Website-Files/style.css
@@ -107,8 +107,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 0px 3px 0px;
+    margin: 0px 0px 0px 0px;
+}
 
+.infoLetter {
     font-size: 14px;
     font-weight: 700;
     font-style: italic;
@@ -168,6 +170,7 @@ body{
 .colorModeIcon{
     width: 25px;
     transition: 0s;
+    margin: 2.5px 0px 0px 0px
     /* transform: translateX(calc(-5vw + 25px)); */
 }
 
@@ -179,6 +182,7 @@ body{
 
 .logoTextContainer{
     overflow: hidden;
+    width: 300px;
 }
 
 #logoText{
